# AyExtractor

./: .gitignore  Makefile  README.md  pyproject.toml
.devcontainer/: Dockerfile  cmd.txt
src/: __init__.py  main.py  version.py
src/api/: __init__.py  facade.py  models.py
src/batch/: __init__.py  dedup.py  models.py  scanner.py
src/cache/: __init__.py  base_cache_store.py  cache_factory.py  fingerprint.py  json_store.py  models.py  redis_store.py  sqlite_store.py
src/chunking/: __init__.py  base_chunker.py  chunk_validator.py  chunker_factory.py  semantic_chunker.py  structural_chunker.py
src/config/: __init__.py  agents.py  settings.py
src/consolidator/: __init__.py  community_clusterer.py  models.py  orchestrator.py
src/core/: __init__.py  models.py  similarity.py
src/extraction/: __init__.py  base_extractor.py  content_merger.py  docx_extractor.py  epub_extractor.py  extractor_factory.py  image_analyzer.py  image_input_extractor.py  language_detector.py  md_extractor.py  pdf_extractor.py  structure_detector.py  table_extractor.py  txt_extractor.py
src/graph/: __init__.py  base_graph_exporter.py  builder.py  contradiction_detector.py  decay_manager.py  entity_linker.py  entity_normalizer.py  exporter_factory.py  inference_engine.py  merger.py  reference_linker.py  relation_normalizer.py  taxonomy.py  triplet_consolidator.py
src/graph/exporters/: cypher_exporter.py  gexf_exporter.py  graphml_exporter.py  json_exporter.py
src/graph/layers/: __init__.py  community_detector.py  community_integrator.py  layer_classifier.py  models.py
src/graph/profiles/: __init__.py  models.py  profile_embedder.py
src/llm/: __init__.py  base_client.py  client_factory.py  config.py  models.py  retry.py  token_budget.py
src/llm/adapters/: __init__.py  anthropic_adapter.py  google_adapter.py  ollama_adapter.py  openai_adapter.py
src/logging/: __init__.py  context.py  handlers.py  logger.py
src/pipeline/: __init__.py  dag_builder.py  document_pipeline.py  llm_factory.py  orchestrator.py  registry.py  runner.py  state.py
src/pipeline/agents/: __init__.py  community_summarizer.py  concept_extractor.py  critic.py  decontextualizer.py  densifier.py  profile_generator.py  reference_extractor.py  summarizer.py  synthesizer.py
src/pipeline/plugin_kit/: __init__.py  base_agent.py  models.py
src/pipeline/prompts/: community_summarizer.txt  concept_extractor.txt  critic.txt  decontextualizer.txt  densifier.txt  entity_normalizer.txt  image_analyzer.txt  profile_generator.txt  reference_extractor.txt  relation_normalizer.txt  summarizer.txt  synthesizer.txt
src/rag/: __init__.py  enricher.py  indexer.py  models.py
src/rag/embeddings/: __init__.py  anthropic_embedder.py  base_embedder.py  embedder_factory.py  ollama_embedder.py  openai_embedder.py  sentence_tf_embedder.py
src/rag/graph_store/: __init__.py  arangodb_store.py  base_graph_store.py  graph_store_factory.py  neo4j_store.py
src/rag/retriever/: __init__.py  chunk_retriever.py  community_retriever.py  context_assembler.py  corpus_retriever.py  entity_retriever.py  pipeline.py  ppr_scorer.py  query_classifier.py
src/rag/vector_store/: __init__.py  base_vector_store.py  chromadb_store.py  qdrant_store.py  vector_store_factory.py
src/storage/: __init__.py  base_output_writer.py  layout.py  local_writer.py  models.py  reader.py  run_manager.py  s3_writer.py  writer_factory.py
src/tracking/: __init__.py  agent_tracker.py  call_logger.py  cost_calculator.py  exporter.py  models.py  session_tracker.py  stats_aggregator.py
tests/: conftest.py
tests/integration/: __init__.py  conftest.py
tests/integration/api/: test_int_api.py
tests/integration/batch/: test_int_batch_subsystem.py
tests/integration/cache/: test_int_cache_stores.py
tests/integration/chunking/: test_int_chunking_modules.py
tests/integration/config/: test_int_settings.py
tests/integration/consolidator/: test_int_consolidator.py
tests/integration/core/: test_int_similarity.py
tests/integration/extraction/: test_int_extraction_modules.py
tests/integration/graph/: test_int_graph_building.py
tests/integration/llm/: test_int_llm_subsystem.py
tests/integration/logging/: test_int_logging_subsystem.py
tests/integration/pipeline/: test_int_pipeline_subsystem.py
tests/integration/rag/: test_int_rag_pipeline.py  test_int_store_factories.py  test_int_stores_memory.py
tests/integration/storage/: test_int_storage_lifecycle.py
tests/integration/tracking/: test_int_tracking_pipeline.py
tests/unit/: test_main.py
tests/unit/api/: test_facade.py  test_models.py
tests/unit/batch/: test_models.py  test_scanner.py  test_unit_dedup.py
tests/unit/cache/: test_cache_factory.py  test_models.py  test_unit_base_cache_store.py  test_unit_redis_store.py  test_unit_sqlite_store.py
tests/unit/chunking/: test_base_chunker.py  test_unit_semantic_chunker.py
tests/unit/config/: test_agents.py  test_settings.py
tests/unit/consolidator/: test_community_clusterer.py  test_orchestrator.py  test_unit_models.py
tests/unit/core/: test_unit_models.py  test_unit_similarity.py
tests/unit/extraction/: test_epub_extractor.py  test_image_analyzer.py  test_unit_base_extractor.py  test_unit_docx_extractor.py  test_unit_extractor_factory.py  (+1 more)
(+80 files in other folders)
